Clean up Troubleshoot structure and TOC (#452)
Various cleanup.


[Preview](https://docs-v3-preview.elastic.dev/elastic/docs-content/pull/452/troubleshoot/)
(main page still intentionally left blank!)

* Continue with cleanup tasks in
https://github.com/elastic/docs-projects/issues/292
* Pull in content from some mapped pages
* Confine changes to `/troubleshoot`

but see #456